Fixing monitoring-icon and monitoring-progress-icon breaking when wrapped in display:grid

--- a/packages/web-components/src/components/rux-monitoring-progress-icon/rux-monitoring-progress-icon.scss
+++ b/packages/web-components/src/components/rux-monitoring-progress-icon/rux-monitoring-progress-icon.scss
@@ -1,5 +1,5 @@
 :host {
-    display: inline-block;
+    display: inline-flex;
     padding: 0;
 }
 
